# mimictg

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
app/: __init__.py  branding.py  config.py  main.py
app/admin/: __init__.py  auth.py  main.py  templating.py
app/admin/routes/: __init__.py  pages.py
app/admin/templates/: ai_logs.html  base.html  broadcast.html  dashboard.html  error_logs.html  login.html  user_detail.html  users.html  workspaces.html
app/bot/: main.py
app/bot/handlers/: __init__.py  admin.py  audit.py  channels.py  common.py  content_plan.py  daily.py  generation.py  ideas.py  publishing.py  settings.py  start.py  subscription.py  utils.py
app/bot/keyboards/: __init__.py  inline.py  reply.py
app/bot/middlewares/: __init__.py  db.py
app/bot/states/: __init__.py  states.py
app/db/: base.py  models.py  session.py
app/db/migrations/: env.py
app/db/repositories/: __init__.py  content.py  payments.py  users.py  workspaces.py
app/services/: __init__.py  privacy.py
payment_handoff/: INTEGRATION_NOTES.md  PAYMENT_FLOW.md  README.md  env.payment.example
prompts/: analyze_style.md  audit_channel_full.md  audit_channel_short.md  daily_post.md  generate_ideas.md  generate_post.md  improve_post.md  parse_content_plan.md  quality_check.md
tests/: test_admin_subscription.py  test_ai_tasks.py  test_parser.py  test_payments.py  test_prompt_loader.py  test_schemas.py  test_tariffs.py
tgpars/: main.py  output.txt
(+30 files in other folders)
