[project]
name = "mimic"
version = "0.1.0"
description = "Mimic — AI-контент-менеджер для Telegram."
requires-python = ">=3.11"
dependencies = [
    "aiogram>=3.7,<4",
    "alembic>=1.13,<2",
    "apscheduler>=3.10,<4",
    "asyncpg>=0.29,<1",
    "beautifulsoup4>=4.12,<5",
    "fastapi>=0.111,<1",
    "httpx>=0.27,<1",
    "itsdangerous>=2.2,<3",
    "jinja2>=3.1,<4",
    "openai>=1.50,<2",
    "pydantic>=2.7,<3",
    "pydantic-settings>=2.3,<3",
    "python-multipart>=0.0.9,<1",
    "requests>=2.32,<3",
    "sqlalchemy[asyncio]>=2.0,<3",
    "uvicorn[standard]>=0.30,<1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2,<9",
    "pytest-asyncio>=0.23,<1",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 110
